--- a/index.html
+++ b/index.html
@@ -160,13 +160,18 @@ const DEFAULT_EMITIDAS_2022 = [
   { id:"e2022-2", num:"02/2022", fecha:"2022-02-10", cliente:"Amoria Capital, S.L.", nif:"", desc:"Iguala mensual (servicios hasta ene 2022)", base:1000, tipoIva:21, iva:210, total:1210, trimestre:"Q1", doc:"docs/emitidas/2022/Factura_2_2022.pdf" },
   { id:"e2022-3", num:"03/2022", fecha:"2022-03-24", cliente:"Col·legi de Procuradors de Barcelona", nif:"", desc:"Diseño Sistema Compliance Penal (2º pago mensual)", base:1706.25, tipoIva:21, iva:358.31, total:2064.56, trimestre:"Q1", doc:"docs/emitidas/2022/Factura_3_2022.pdf" },
   { id:"e2022-4", num:"04/2022", fecha:"2022-04-05", cliente:"ASCOM", nif:"G-87034120", desc:"Seminario Compliance 24/03/2022 (exento art.20.9)", base:300, tipoIva:0, iva:0, total:300, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_4_2022.pdf" },
+  { id:"e2022-4b", num:"05/2022", fecha:"2022-05-03", cliente:"Fundación Instituto de Empresa", nif:"G-81711459", desc:"Honorarios Dir. Observatorio IE-Elecnor (ene-abr 2021)", base:2000, tipoIva:21, iva:420, total:2420, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_5_2022.pdf" },
   { id:"e2022-5", num:"06/2022", fecha:"2022-05-03", cliente:"Col·legi de Procuradors de Barcelona", nif:"", desc:"Diseño Sistema Compliance Penal (3er pago mensual)", base:1706.25, tipoIva:21, iva:358.31, total:2064.56, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_6_2022.pdf" },
   { id:"e2022-6", num:"07/2022", fecha:"2022-05-23", cliente:"Círculo del Liceo", nif:"G08413528", desc:"Implantación Sistema Compliance Penal", base:840, tipoIva:21, iva:176.40, total:1016.40, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_7_2022.pdf" },
   { id:"e2022-7", num:"09/2022", fecha:"2022-06-20", cliente:"Col·legi de Procuradors de Barcelona", nif:"", desc:"Diseño Sistema Compliance Penal (4º y último pago)", base:1706.25, tipoIva:21, iva:358.31, total:2064.56, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_9_2022.pdf" },
+  { id:"e2022-7b", num:"08/2022", fecha:"2022-06-20", cliente:"ASCOM", nif:"G-87034120", desc:"Seminario Compliance 15/06/2022 (exento art.20.9)", base:300, tipoIva:0, iva:0, total:300, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_8_2022.pdf" },
+  { id:"e2022-7c", num:"10/2022", fecha:"2022-06-20", cliente:"Círculo del Liceo", nif:"G08413528", desc:"Diseño Sistema Compliance Penal (pago mensual 2/4)", base:840, tipoIva:21, iva:176.40, total:1016.40, trimestre:"Q2", doc:"docs/emitidas/2022/Factura_10_2022.pdf" },
+  { id:"e2022-7d", num:"13/2022", fecha:"2022-07-29", cliente:"Círculo del Liceo", nif:"G08413528", desc:"Diseño Sistema Compliance Penal (pago mensual 4/4)", base:840, tipoIva:21, iva:176.40, total:1016.40, trimestre:"Q3", doc:"docs/emitidas/2022/Factura_13b_2022.pdf" },
   { id:"e2022-8", num:"12/2022", fecha:"2022-09-23", cliente:"Fundación Instituto de Empresa", nif:"G-81711459", desc:"Honorarios Dir. Observatorio IE-Elecnor (may-ago 2022)", base:2000, tipoIva:21, iva:420, total:2420, trimestre:"Q3", doc:"docs/emitidas/2022/Factura_12_2022.pdf" },
-  { id:"e2022-9", num:"13/2022", fecha:"2022-09-29", cliente:"E.P.E.L. Neàpolis", nif:"Q-08015721", desc:"Curso Blockchain TTT (jun 2022 – 6 horas)", base:318, tipoIva:21, iva:66.78, total:384.78, trimestre:"Q3", doc:"docs/emitidas/2022/Factura_13_2022.pdf" },
+  { id:"e2022-9", num:"11/2022", fecha:"2022-09-29", cliente:"E.P.E.L. Neàpolis", nif:"Q-08015721", desc:"Curso Blockchain TTT (jun 2022 – 6 horas)", base:318, tipoIva:21, iva:66.78, total:384.78, trimestre:"Q3", doc:"docs/emitidas/2022/Factura_11_2022.pdf" },
   { id:"e2022-10", num:"14/2022", fecha:"2022-09-29", cliente:"Círculo del Liceo", nif:"G08413528", desc:"Diseño Sistema Compliance Penal (pago 4/4)", base:840, tipoIva:21, iva:176.40, total:1016.40, trimestre:"Q3", doc:"docs/emitidas/2022/Factura_14_2022.pdf" },
   { id:"e2022-11", num:"15/2022", fecha:"2022-10-19", cliente:"ASCOM", nif:"G-87034120", desc:"Seminario Compliance 18/10/2022 (exento art.20.9)", base:300, tipoIva:0, iva:0, total:300, trimestre:"Q4", doc:"docs/emitidas/2022/Factura_15_2022.pdf" },
+  { id:"e2022-11b", num:"16/2022", fecha:"2022-10-28", cliente:"ICAB", nif:"Q0863003-J", desc:"Clases Máster Compliance ICAB 24/10/2022 (exento art.20.9)", base:300, tipoIva:0, iva:0, total:300, trimestre:"Q4", doc:"docs/emitidas/2022/Factura_16_2022.pdf" },
   { id:"e2022-12", num:"17/2022", fecha:"2022-12-19", cliente:"Fundación Instituto de Empresa", nif:"G-81711459", desc:"Honorarios Dir. Observatorio IE-Elecnor (sep-dic 2022)", base:2000, tipoIva:21, iva:420, total:2420, trimestre:"Q4", doc:"docs/emitidas/2022/Factura_17_2022.pdf" },
   { id:"e2022-13", num:"18/2022", fecha:"2022-12-31", cliente:"Amoria Capital, S.L.", nif:"", desc:"Rectificativa de 02/2022 — cancelación iguala", base:-1000, tipoIva:21, iva:-210, total:-1210, trimestre:"Q4", doc:"docs/emitidas/2022/Factura_18_2022.pdf" },
 ];
@@ -669,7 +674,7 @@ function loadData(key, def) { try { const d = localStorage.getItem(key); return 
 function saveData(key, data) { try { localStorage.setItem(key, JSON.stringify(data)); } catch(e) {} }
 
 // Auto-reset when version changes (forces new data with doc links)
-const APP_VERSION = "5.2"; // v5.2: add Invoice 2/2024 (Blockchain Intelligence 225€)
+const APP_VERSION = "5.3"; // v5.3: complete 2022 emitidas (05,08,10,13,16) + fix Neàpolis num
 if(localStorage.getItem("app_version") !== APP_VERSION) {
   localStorage.clear();
   localStorage.setItem("app_version", APP_VERSION);
